[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/DamageArea.gd" type="Script" id=1]
[ext_resource path="res://Sprites/circle.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 39.5764

[node name="Node2D" type="Node2D" index="0"]

position = Vector2( 524.429, 281.741 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform" ]
area_time = 5
damage = 5
damage_tick_time = 1

[node name="circle" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="DamageArea" type="Area2D" parent="circle" index="0"]

scale = Vector2( 5, 5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="circle/DamageArea" index="0"]

shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="circle/DamageArea" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="circle/DamageArea" to="." method="_on_DamageArea_body_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


